refactor: parameters and requests
